--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="navbar">
-        <img src="C:\xampp\htdocs\demo\downlaod.jpg">
+        <img src="./downlaod.jpg">
         <br>
         <hr>
         <br>
@@ -101,23 +101,23 @@
         <hr>
         <div id="lang">
         <div>
-            <img src="C:\xampp\htdocs\demo\html.png">
+            <img src="./html.png">
             <p>HTML</p>
         </div>
         <div>
-            <img src="C:\xampp\htdocs\demo\CSS.png">
+            <img src="./CSS.png">
             <p>CSS</p>
         </div>
         <div>
-            <img src="C:\xampp\htdocs\demo\js.png">
+            <img src="./js.png">
             <p>JavaScript</p>
         </div>
         <div>
-            <img src="C:\xampp\htdocs\demo\java.png">
+            <img src="./java.png">
             <p>Java</p>
         </div>
         <div>
-            <img src="C:\xampp\htdocs\demo\c++.png">
+            <img src="./c++.png">
             <p>C++</p>
         </div>
     </div>
@@ -127,7 +127,7 @@
         <hr>
         <div id="data">
             <div>
-                <img src="C:\xampp\htdocs\demo\mysql.png">
+                <img src="./mysql.png">
                 <p>MySQL</p>
             </div>
         </div>
@@ -137,11 +137,11 @@
         <hr>
         <div id="other">
             <div>
-                <img src="C:\xampp\htdocs\demo\plc.png">
+                <img src="./plc.png">
                 <p>PLC Programming</p>
             </div>
             <div>
-                <img src="C:\xampp\htdocs\demo\arduino.png">
+                <img src="./arduino.png">
                 <p>Arduino</p>
             </div>
             <div>
