--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <p>Arduino</p>
             </div>
             <div>
-                <img src="C:\xampp\htdocs\demo\prompt.png">
+                <img src="./prompt.png">
                 <p>Prompt Engineering</p>
             </div>
         </div>
