--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <p>Java</p>
         </div>
         <div>
-            <img src="./c++.png">
+            <img src="./php.png">
             <p>C++</p>
         </div>
     </div>
