--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         </div>
         <div>
             <img src="./php.png">
-            <p>C++</p>
+            <p>PHP</p>
         </div>
     </div>
     </div>
